data/raw_logs/syntactic/syn_15.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_15.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_15.c:1:30: error: expected ';' before '}' token
    1 | int main() { for (;;) { break } }
      |                              ^~
      |                              ;
